--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        h3{
+            color: orange;
+        }
+        p{
+            background-color: palegreen;
+        }
+    </style>
 </head>
 <body>
     <h3>世界你好</h3>
