还没有完成

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <ul>
+        <li class="li1">1</li>
+        <li class="li2">2</li>
+        <li class="li3">3</li>
+        <li class="li4">4</li>
+        <li class="li5">5</li>
+        <li class="li6">6</li>
+    </ul>
     <h3>世界你好</h3>
     <p>this is my first blog</p>
 </body>
