添加了文字

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <li class="li3">3</li>
         <li class="li4">4</li>
         <li class="li5">5</li>
-        <li class="li6">6</li>
+        <li class="li6">点我试试</li>
     </ul>
     <h3>世界你好</h3>
     <p>this is my first blog</p>
