--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <div class="title">玩个小游戏才是正事</div>
     <ul>
         <li class="li1">1</li>
         <li class="li2">2</li>
